# netobs

./: .gitignore  .pre-commit-config.yaml  CITATIONS.bib  CONTRIBUTING.md  NOTICE.txt  README.md  pyproject.toml
.github/: license_header.txt
.github/workflows/: test.yml
netobs/: __init__.py  __main__.py  checkpoint.py  cli.py  evaluate.py  logging.py  options.py
netobs/adaptors/: __init__.py  deepsolid_vmc.py  ferminet_vmc.py  simple_hydrogen.py
netobs/helpers/: asbl_config.py  chunk_vmap.py  digest.py  grad.py  importer.py
netobs/observables/: __init__.py  density.py  energy.py  force.py  polarization.py  stress.py  wf_change.py
netobs/systems/: __init__.py  elec_gas.py  molecule.py  solid.py
tests/: adaptor_test.py  checkpoint_test.py  cli_test.py  conftest.py  numerical_test.py
tests/__snapshots__/: adaptor_test.ambr  numerical_test.ambr
tests/data/: H_atom.npz  H_atom.py  H_chain.npz  H_chain.py
