[project]
name = "netobs"
version = "0.1.0"
license = {file = "LICENSE"}
description = "Observables with neural network VMC"
authors = [
    {name = "Yubing Qian", email="qyb@bytedance.com"}
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
    "universal_pathlib",
    "fsspec",
    "omegaconf",
    "jax",
    "jaxlib",
    "ml_collections"
]

[project.urls]
Homepage = "https://github.com/bytedance/NetObs"
Repository = "https://github.com/bytedance/NetObs.git"
"Bug Tracker" = "https://github.com/bytedance/NetObs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
    "pydoclint",
    "pytest",
    "syrupy",
]

[project.scripts]
netobs = "netobs.__main__:cli"

[tool.mypy]
ignore_missing_imports = true

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
docstring-style = "google"

[tool.ruff.lint]
extend-select = ["D", "I001"]
ignore = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["netobs"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
